5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4002/executions/1635_2711.log
== TEST (2019-04-14 12:04:59) 
-- CODE:
valor = float(input("valor: "))
quantru = float(input("quant: "))
valorru = float(input("valor do r.u: "))
quantpasse = float(input("quant: "))
valorpasse = float(input("valor do passe: "))
total = float(quantru + valorru + quantpasse + valorpasse)

if(valor >= total):
	mensagem: "SUFICIENTE"
	print(mensagem)
else:
	mensagem: "INSUFICIENTE"
	print(mensagem)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    print(mensagem)
NameError: name 'mensagem' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 12:05:55) 
-- CODE:
valor = float(input("valor: "))
quantru = float(input("quant: "))
valorru = float(input("valor do r.u: "))
quantpasse = float(input("quant: "))
valorpasse = float(input("valor do passe: "))
total = int(quantru + valorru + quantpasse + valorpasse)

if(valor >= total):
	mensagem: "SUFICIENTE"
	print(mensagem)
else:
	mensagem: "INSUFICIENTE"
	print(mensagem)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    print(mensagem)
NameError: name 'mensagem' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 12:05:57) 
-- CODE:
valor = float(input("valor: "))
quantru = float(input("quant: "))
valorru = float(input("valor do r.u: "))
quantpasse = float(input("quant: "))
valorpasse = float(input("valor do passe: "))
total = int(quantru + valorru + quantpasse + valorpasse)

if(valor >= total):
	mensagem: "SUFICIENTE"
	print(mensagem)
else:
	mensagem: "INSUFICIENTE"
	print(mensagem)
	
-- EXECUTION TIME:
0.165291
-- ERROR:
  File "/home/codebench/codes/1635/2711/main.py", line 9
    mensagem: "SUFICIENTE"
            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 12:05:58) 
-- CODE:
valor = float(input("valor: "))
quantru = float(input("quant: "))
valorru = float(input("valor do r.u: "))
quantpasse = float(input("quant: "))
valorpasse = float(input("valor do passe: "))
total = int(quantru + valorru + quantpasse + valorpasse)

if(valor >= total):
	mensagem: "SUFICIENTE"
	print(mensagem)
else:
	mensagem: "INSUFICIENTE"
	print(mensagem)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    print(mensagem)
NameError: name 'mensagem' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 12:06:43) 
-- CODE:
valor = float(input("valor: "))
quantru = float(input("quant: "))
valorru = float(input("valor do r.u: "))
quantpasse = float(input("quant: "))
valorpasse = float(input("valor do passe: "))
total = float(quantru + valorru + quantpasse + valorpasse)

if(valor >= total):
	mensagem = "SUFICIENTE"
	print(mensagem)
else:
	mensagem = "INSUFICIENTE"
	print(mensagem)
	
-- OUTPUT:
SUFICIENTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 12:06:47) 
-- CODE:
valor = float(input("valor: "))
quantru = float(input("quant: "))
valorru = float(input("valor do r.u: "))
quantpasse = float(input("quant: "))
valorpasse = float(input("valor do passe: "))
total = float(quantru + valorru + quantpasse + valorpasse)

if(valor >= total):
	mensagem = "SUFICIENTE"
	print(mensagem)
else:
	mensagem = "INSUFICIENTE"
	print(mensagem)
	
-- EXECUTION TIME:
0.133727
-- TEST CASE 1:
---- input:
400
15
1.20
30
1.50
---- correct output:
SUFICIENTE
---- user output:
SUFICIENTE
-- TEST CASE 2:
---- input:
90
22
1.20
44
1.50
---- correct output:
INSUFICIENTE
---- user output:
SUFICIENTE
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 12:06:48) 
-- CODE:
valor = float(input("valor: "))
quantru = float(input("quant: "))
valorru = float(input("valor do r.u: "))
quantpasse = float(input("quant: "))
valorpasse = float(input("valor do passe: "))
total = float(quantru + valorru + quantpasse + valorpasse)

if(valor >= total):
	mensagem = "SUFICIENTE"
	print(mensagem)
else:
	mensagem = "INSUFICIENTE"
	print(mensagem)
	
-- OUTPUT:
SUFICIENTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 12:07:00) 
-- CODE:
valor = float(input("valor: "))
quantru = float(input("quant: "))
valorru = float(input("valor do r.u: "))
quantpasse = float(input("quant: "))
valorpasse = float(input("valor do passe: "))
total = float(quantru + valorru + quantpasse + valorpasse)

if(valor >= total):
	mensagem = "SUFICIENTE"
	print(mensagem)
else:
	mensagem = "INSUFICIENTE"
	print(mensagem)
	
-- OUTPUT:
SUFICIENTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 12:07:01) 
-- CODE:
valor = float(input("valor: "))
quantru = float(input("quant: "))
valorru = float(input("valor do r.u: "))
quantpasse = float(input("quant: "))
valorpasse = float(input("valor do passe: "))
total = float(quantru + valorru + quantpasse + valorpasse)

if(valor >= total):
	mensagem = "SUFICIENTE"
	print(mensagem)
else:
	mensagem = "INSUFICIENTE"
	print(mensagem)
	
-- OUTPUT:
SUFICIENTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 12:07:03) 
-- CODE:
valor = float(input("valor: "))
quantru = float(input("quant: "))
valorru = float(input("valor do r.u: "))
quantpasse = float(input("quant: "))
valorpasse = float(input("valor do passe: "))
total = float(quantru + valorru + quantpasse + valorpasse)

if(valor >= total):
	mensagem = "SUFICIENTE"
	print(mensagem)
else:
	mensagem = "INSUFICIENTE"
	print(mensagem)
	
-- OUTPUT:
SUFICIENTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 12:07:04) 
-- CODE:
valor = float(input("valor: "))
quantru = float(input("quant: "))
valorru = float(input("valor do r.u: "))
quantpasse = float(input("quant: "))
valorpasse = float(input("valor do passe: "))
total = float(quantru + valorru + quantpasse + valorpasse)

if(valor >= total):
	mensagem = "SUFICIENTE"
	print(mensagem)
else:
	mensagem = "INSUFICIENTE"
	print(mensagem)
	
-- OUTPUT:
SUFICIENTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 12:07:07) 
-- CODE:
valor = float(input("valor: "))
quantru = float(input("quant: "))
valorru = float(input("valor do r.u: "))
quantpasse = float(input("quant: "))
valorpasse = float(input("valor do passe: "))
total = float(quantru + valorru + quantpasse + valorpasse)

if(valor >= total):
	mensagem = "SUFICIENTE"
	print(mensagem)
else:
	mensagem = "INSUFICIENTE"
	print(mensagem)
	
-- EXECUTION TIME:
0.114364
-- TEST CASE 1:
---- input:
400
15
1.20
30
1.50
---- correct output:
SUFICIENTE
---- user output:
SUFICIENTE
-- TEST CASE 2:
---- input:
90
22
1.20
44
1.50
---- correct output:
INSUFICIENTE
---- user output:
SUFICIENTE
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 12:07:24) 
-- CODE:
valor = float(input("valor: "))
quantru = float(input("quant: "))
valorru = float(input("valor do r.u: "))
quantpasse = float(input("quant: "))
valorpasse = float(input("valor do passe: "))
total = float(quantru + valorru + quantpasse + valorpasse)

if(valor >= total):
	mensagem = "SUFICIENTE"
	print(mensagem)
else:
	mensagem = "INSUFICIENTE"
	print(mensagem)
	
-- OUTPUT:
SUFICIENTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 12:07:35) 
-- CODE:
valor = float(input("valor: "))
quantru = float(input("quant: "))
valorru = float(input("valor do r.u: "))
quantpasse = float(input("quant: "))
valorpasse = float(input("valor do passe: "))
total = float(quantru + valorru + quantpasse + valorpasse)

if(valor >= total):
	mensagem = "SUFICIENTE"
	print(mensagem)
else:
	mensagem = "INSUFICIENTE"
	print(mensagem)
	
-- OUTPUT:
SUFICIENTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 12:07:53) 
-- CODE:
valor = float(input("valor: "))
quantru = float(input("quant: "))
valorru = float(input("valor do r.u: "))
quantpasse = float(input("quant: "))
valorpasse = float(input("valor do passe: "))
total = float(quantru + valorru + quantpasse + valorpasse)

if(valor >= total):
	mensagem = "SUFICIENTE"
	print(mensagem)
else:
	mensagem = "INSUFICIENTE"
	print(mensagem)
	
-- OUTPUT:
SUFICIENTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 12:07:55) 
-- CODE:
valor = float(input("valor: "))
quantru = float(input("quant: "))
valorru = float(input("valor do r.u: "))
quantpasse = float(input("quant: "))
valorpasse = float(input("valor do passe: "))
total = float(quantru + valorru + quantpasse + valorpasse)

if(valor >= total):
	mensagem = "SUFICIENTE"
	print(mensagem)
else:
	mensagem = "INSUFICIENTE"
	print(mensagem)
	
-- EXECUTION TIME:
0.155443
-- TEST CASE 1:
---- input:
400
15
1.20
30
1.50
---- correct output:
SUFICIENTE
---- user output:
SUFICIENTE
-- TEST CASE 2:
---- input:
90
22
1.20
44
1.50
---- correct output:
INSUFICIENTE
---- user output:
SUFICIENTE
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 12:07:55) 
-- CODE:
valor = float(input("valor: "))
quantru = float(input("quant: "))
valorru = float(input("valor do r.u: "))
quantpasse = float(input("quant: "))
valorpasse = float(input("valor do passe: "))
total = float(quantru + valorru + quantpasse + valorpasse)

if(valor >= total):
	mensagem = "SUFICIENTE"
	print(mensagem)
else:
	mensagem = "INSUFICIENTE"
	print(mensagem)
	
-- EXECUTION TIME:
0.117617
-- TEST CASE 1:
---- input:
400
15
1.20
30
1.50
---- correct output:
SUFICIENTE
---- user output:
SUFICIENTE
-- TEST CASE 2:
---- input:
90
22
1.20
44
1.50
---- correct output:
INSUFICIENTE
---- user output:
SUFICIENTE
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 12:07:56) 
-- CODE:
valor = float(input("valor: "))
quantru = float(input("quant: "))
valorru = float(input("valor do r.u: "))
quantpasse = float(input("quant: "))
valorpasse = float(input("valor do passe: "))
total = float(quantru + valorru + quantpasse + valorpasse)

if(valor >= total):
	mensagem = "SUFICIENTE"
	print(mensagem)
else:
	mensagem = "INSUFICIENTE"
	print(mensagem)
	
-- EXECUTION TIME:
0.222044
-- TEST CASE 1:
---- input:
400
15
1.20
30
1.50
---- correct output:
SUFICIENTE
---- user output:
SUFICIENTE
-- TEST CASE 2:
---- input:
90
22
1.20
44
1.50
---- correct output:
INSUFICIENTE
---- user output:
SUFICIENTE
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 12:07:56) 
-- CODE:
valor = float(input("valor: "))
quantru = float(input("quant: "))
valorru = float(input("valor do r.u: "))
quantpasse = float(input("quant: "))
valorpasse = float(input("valor do passe: "))
total = float(quantru + valorru + quantpasse + valorpasse)

if(valor >= total):
	mensagem = "SUFICIENTE"
	print(mensagem)
else:
	mensagem = "INSUFICIENTE"
	print(mensagem)
	
-- EXECUTION TIME:
0.120946
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1635/2711/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 12:07:56) 
-- CODE:
valor = float(input("valor: "))
quantru = float(input("quant: "))
valorru = float(input("valor do r.u: "))
quantpasse = float(input("quant: "))
valorpasse = float(input("valor do passe: "))
total = float(quantru + valorru + quantpasse + valorpasse)

if(valor >= total):
	mensagem = "SUFICIENTE"
	print(mensagem)
else:
	mensagem = "INSUFICIENTE"
	print(mensagem)
	
-- EXECUTION TIME:
0.161684
-- TEST CASE 1:
---- input:
400
15
1.20
30
1.50
---- correct output:
SUFICIENTE
---- user output:
SUFICIENTE
-- TEST CASE 2:
---- input:
90
22
1.20
44
1.50
---- correct output:
INSUFICIENTE
---- user output:
SUFICIENTE
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 12:07:56) 
-- CODE:
valor = float(input("valor: "))
quantru = float(input("quant: "))
valorru = float(input("valor do r.u: "))
quantpasse = float(input("quant: "))
valorpasse = float(input("valor do passe: "))
total = float(quantru + valorru + quantpasse + valorpasse)

if(valor >= total):
	mensagem = "SUFICIENTE"
	print(mensagem)
else:
	mensagem = "INSUFICIENTE"
	print(mensagem)
	
-- EXECUTION TIME:
0.109337
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1635/2711/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 12:08:00) 
-- CODE:
valor = float(input("valor: "))
quantru = float(input("quant: "))
valorru = float(input("valor do r.u: "))
quantpasse = float(input("quant: "))
valorpasse = float(input("valor do passe: "))
total = float(quantru + valorru + quantpasse + valorpasse)

if(valor >= total):
	mensagem = "SUFICIENTE"
	print(mensagem)
else:
	mensagem = "INSUFICIENTE"
	print(mensagem)
-- EXECUTION TIME:
0.204274
-- TEST CASE 1:
---- input:
400
15
1.20
30
1.50
---- correct output:
SUFICIENTE
---- user output:
SUFICIENTE
-- TEST CASE 2:
---- input:
90
22
1.20
44
1.50
---- correct output:
INSUFICIENTE
---- user output:
SUFICIENTE
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 12:08:01) 
-- CODE:
valor = float(input("valor: "))
quantru = float(input("quant: "))
valorru = float(input("valor do r.u: "))
quantpasse = float(input("quant: "))
valorpasse = float(input("valor do passe: "))
total = float(quantru + valorru + quantpasse + valorpasse)

if(valor >= total):
	mensagem = "SUFICIENTE"
	print(mensagem)
else:
	mensagem = "INSUFICIENTE"
	print(mensagem)
-- EXECUTION TIME:
0.200681
-- TEST CASE 1:
---- input:
400
15
1.20
30
1.50
---- correct output:
SUFICIENTE
---- user output:
SUFICIENTE
-- TEST CASE 2:
---- input:
90
22
1.20
44
1.50
---- correct output:
INSUFICIENTE
---- user output:
SUFICIENTE
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 12:08:01) 
-- CODE:
valor = float(input("valor: "))
quantru = float(input("quant: "))
valorru = float(input("valor do r.u: "))
quantpasse = float(input("quant: "))
valorpasse = float(input("valor do passe: "))
total = float(quantru + valorru + quantpasse + valorpasse)

if(valor >= total):
	mensagem = "SUFICIENTE"
	print(mensagem)
else:
	mensagem = "INSUFICIENTE"
	print(mensagem)
-- EXECUTION TIME:
0.110631
-- TEST CASE 1:
---- input:
400
15
1.20
30
1.50
---- correct output:
SUFICIENTE
---- user output:
SUFICIENTE
-- TEST CASE 2:
---- input:
90
22
1.20
44
1.50
---- correct output:
INSUFICIENTE
---- user output:
SUFICIENTE
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 12:08:44) 
-- CODE:
valor = float(input("valor: "))
quantru = int(input("quant: "))
valorru = float(input("valor do r.u: "))
quantpasse = int(input("quant: "))
valorpasse = float(input("valor do passe: "))
total = float(quantru + valorru + quantpasse + valorpasse)

if(valor >= total):
	mensagem = "SUFICIENTE"
	print(mensagem)
else:
	mensagem = "INSUFICIENTE"
	print(mensagem)
-- EXECUTION TIME:
0.190149
-- TEST CASE 1:
---- input:
400
15
1.20
30
1.50
---- correct output:
SUFICIENTE
---- user output:
SUFICIENTE
-- TEST CASE 2:
---- input:
90
22
1.20
44
1.50
---- correct output:
INSUFICIENTE
---- user output:
SUFICIENTE
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 12:08:45) 
-- CODE:
valor = float(input("valor: "))
quantru = int(input("quant: "))
valorru = float(input("valor do r.u: "))
quantpasse = int(input("quant: "))
valorpasse = float(input("valor do passe: "))
total = float(quantru + valorru + quantpasse + valorpasse)

if(valor >= total):
	mensagem = "SUFICIENTE"
	print(mensagem)
else:
	mensagem = "INSUFICIENTE"
	print(mensagem)
-- OUTPUT:
SUFICIENTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 12:08:47) 
-- CODE:
valor = float(input("valor: "))
quantru = int(input("quant: "))
valorru = float(input("valor do r.u: "))
quantpasse = int(input("quant: "))
valorpasse = float(input("valor do passe: "))
total = float(quantru + valorru + quantpasse + valorpasse)

if(valor >= total):
	mensagem = "SUFICIENTE"
	print(mensagem)
else:
	mensagem = "INSUFICIENTE"
	print(mensagem)
-- EXECUTION TIME:
0.137235
-- TEST CASE 1:
---- input:
400
15
1.20
30
1.50
---- correct output:
SUFICIENTE
---- user output:
SUFICIENTE
-- TEST CASE 2:
---- input:
90
22
1.20
44
1.50
---- correct output:
INSUFICIENTE
---- user output:
SUFICIENTE
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 12:08:48) 
-- CODE:
valor = float(input("valor: "))
quantru = int(input("quant: "))
valorru = float(input("valor do r.u: "))
quantpasse = int(input("quant: "))
valorpasse = float(input("valor do passe: "))
total = float(quantru + valorru + quantpasse + valorpasse)

if(valor >= total):
	mensagem = "SUFICIENTE"
	print(mensagem)
else:
	mensagem = "INSUFICIENTE"
	print(mensagem)
-- OUTPUT:
SUFICIENTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 12:08:48) 
-- CODE:
valor = float(input("valor: "))
quantru = int(input("quant: "))
valorru = float(input("valor do r.u: "))
quantpasse = int(input("quant: "))
valorpasse = float(input("valor do passe: "))
total = float(quantru + valorru + quantpasse + valorpasse)

if(valor >= total):
	mensagem = "SUFICIENTE"
	print(mensagem)
else:
	mensagem = "INSUFICIENTE"
	print(mensagem)
-- OUTPUT:
SUFICIENTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 12:08:49) 
-- CODE:
valor = float(input("valor: "))
quantru = int(input("quant: "))
valorru = float(input("valor do r.u: "))
quantpasse = int(input("quant: "))
valorpasse = float(input("valor do passe: "))
total = float(quantru + valorru + quantpasse + valorpasse)

if(valor >= total):
	mensagem = "SUFICIENTE"
	print(mensagem)
else:
	mensagem = "INSUFICIENTE"
	print(mensagem)
-- OUTPUT:
SUFICIENTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 12:08:49) 
-- CODE:
valor = float(input("valor: "))
quantru = int(input("quant: "))
valorru = float(input("valor do r.u: "))
quantpasse = int(input("quant: "))
valorpasse = float(input("valor do passe: "))
total = float(quantru + valorru + quantpasse + valorpasse)

if(valor >= total):
	mensagem = "SUFICIENTE"
	print(mensagem)
else:
	mensagem = "INSUFICIENTE"
	print(mensagem)
-- OUTPUT:
SUFICIENTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 12:08:49) 
-- CODE:
valor = float(input("valor: "))
quantru = int(input("quant: "))
valorru = float(input("valor do r.u: "))
quantpasse = int(input("quant: "))
valorpasse = float(input("valor do passe: "))
total = float(quantru + valorru + quantpasse + valorpasse)

if(valor >= total):
	mensagem = "SUFICIENTE"
	print(mensagem)
else:
	mensagem = "INSUFICIENTE"
	print(mensagem)
-- OUTPUT:
SUFICIENTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 12:09:32) 
-- CODE:
valor = float(input("valor: "))
quantru = int(input("quant: "))
valorru = float(input("valor do r.u: "))
quantpasse = int(input("quant: "))
valorpasse = float(input("valor do passe: "))
total = float(quantru + valorru + quantpasse + valorpasse)

if(valor >= total):
	mensagem = "SUFICIENTE"
	print(mensagem)
else:
	mensagem = "INSUFICIENTE"
	print(mensagem)
-- OUTPUT:
SUFICIENTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 12:09:34) 
-- CODE:
valor = float(input("valor: "))
quantru = int(input("quant: "))
valorru = float(input("valor do r.u: "))
quantpasse = int(input("quant: "))
valorpasse = float(input("valor do passe: "))
total = float(quantru + valorru + quantpasse + valorpasse)

if(valor >= total):
	mensagem = "SUFICIENTE"
	print(mensagem)
else:
	mensagem = "INSUFICIENTE"
	print(mensagem)
-- EXECUTION TIME:
0.123956
-- TEST CASE 1:
---- input:
400
15
1.20
30
1.50
---- correct output:
SUFICIENTE
---- user output:
SUFICIENTE
-- TEST CASE 2:
---- input:
90
22
1.20
44
1.50
---- correct output:
INSUFICIENTE
---- user output:
SUFICIENTE
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 12:09:35) 
-- CODE:
valor = float(input("valor: "))
quantru = int(input("quant: "))
valorru = float(input("valor do r.u: "))
quantpasse = int(input("quant: "))
valorpasse = float(input("valor do passe: "))
total = float(quantru + valorru + quantpasse + valorpasse)

if(valor >= total):
	mensagem = "SUFICIENTE"
	print(mensagem)
else:
	mensagem = "INSUFICIENTE"
	print(mensagem)
-- OUTPUT:
SUFICIENTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 12:09:38) 
-- CODE:
valor = float(input("valor: "))
quantru = int(input("quant: "))
valorru = float(input("valor do r.u: "))
quantpasse = int(input("quant: "))
valorpasse = float(input("valor do passe: "))
total = float(quantru + valorru + quantpasse + valorpasse)

if(valor >= total):
	mensagem = "SUFICIENTE"
	print(mensagem)
else:
	mensagem = "INSUFICIENTE"
	print(mensagem)
-- EXECUTION TIME:
0.137153
-- TEST CASE 1:
---- input:
400
15
1.20
30
1.50
---- correct output:
SUFICIENTE
---- user output:
SUFICIENTE
-- TEST CASE 2:
---- input:
90
22
1.20
44
1.50
---- correct output:
INSUFICIENTE
---- user output:
SUFICIENTE
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 12:09:39) 
-- CODE:
valor = float(input("valor: "))
quantru = int(input("quant: "))
valorru = float(input("valor do r.u: "))
quantpasse = int(input("quant: "))
valorpasse = float(input("valor do passe: "))
total = float(quantru + valorru + quantpasse + valorpasse)

if(valor >= total):
	mensagem = "SUFICIENTE"
	print(mensagem)
else:
	mensagem = "INSUFICIENTE"
	print(mensagem)
-- OUTPUT:
SUFICIENTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 12:10:23) 
-- CODE:
valor = float(input("valor: "))
quantru = int(input("quant: "))
valorru = float(input("valor do r.u: "))
quantpasse = int(input("quant: "))
valorpasse = float(input("valor do passe: "))
total = float(quantru*valorru + quantpasse*valorpasse)

if(valor >= total):
	mensagem = "SUFICIENTE"
	print(mensagem)
else:
	mensagem = "INSUFICIENTE"
	print(mensagem)
-- EXECUTION TIME:
0.190852
-- TEST CASE 1:
---- input:
400
15
1.20
30
1.50
---- correct output:
SUFICIENTE
---- user output:
SUFICIENTE
-- TEST CASE 2:
---- input:
90
22
1.20
44
1.50
---- correct output:
INSUFICIENTE
---- user output:
INSUFICIENTE
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
